--- a/styles.css
+++ b/styles.css
@@ -67,8 +67,17 @@ button:hover { filter: brightness(1.2); }
 }
 
 .question-btn{
-  width:240px;   
+  width:240px;
   max-width:none; /* remove eventuais limites             */
+}
+
+.ms-topic{
+  font-weight:bold;
+  display:block;
+}
+
+.ms-label{
+  display:block;
 }
 
 .subject-btn {             /* botões de assunto */
