--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@
   --c-qui:  #0093D6;
   --c-fis:  #904992;
   --c-mat:  #F5821F;
-  --c-d1:   #00A8B0;
+  --c-d1:   #F5C500;
 }
 
 /* =====================================================================================
